# MeetingTranscript

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  config.py  exporters.py  main.py  models.py  processor.py  storage.py  transcription.py
scripts/: dev-start.sh
static/: index.html
tests/: test_api.py  test_processor.py  test_transcription.py
